--- a/client/src/components/user/Profile.css
+++ b/client/src/components/user/Profile.css
@@ -126,3 +126,31 @@ ul {
 ul li {
     padding: 5px 0;
 }
+.Modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    right: auto;
+    bottom: auto;
+    width:90%;
+    height: 500px;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 20px;
+    border: 1px solid #ccc;
+    boxShadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align-last: left;
+    text-align: left;
+    margin-right: 200px;
+    
+
+}
+
+.Overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    backgroundColor: rgba(0, 0, 0, 0.75);
+}
